# MouseSpot

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/mouse_spot/: __init__.py  config.py  controller.py  gesture.py  main.py  overlay.py  smoother.py  tracker.py
tests/: test_gesture.py  test_smoother.py
