[project]
name = "mousespot"
version = "0.1.0"
description = "Control your mouse cursor with hand gestures via MediaPipe"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Precious Ezeigbo" }]
dependencies = [
    "mediapipe<0.10.15",
    "opencv-python>=4.9.0.80",
    "pynput>=1.7",
    "pystray>=0.19",
    "Pillow>=10.0",
    "numpy>=1.24",
]

[project.scripts]
mousespot = "mouse_spot.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mouse_spot"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
